--- a/app.yaml
+++ b/app.yaml
@@ -3,12 +3,12 @@ api_version: 1
 threadsafe: true
 
 handlers:
-  url: /static
+-url:/static
   static_dir: static
-  urlL: /.*
+-url: /.*
   script: main.app 
 
 libraries:
-  name: ssl 
+-name: ssl 
   version: latest
   
